# yt-translate

./: .gitignore  README.md  exposed-the-dead-communist-behind-mamdani-and-the-cfr-s-post_zh.md  pyproject.toml
.github/workflows/: pages.yml
articles/: buried-obama-s-850m-library-hides-the-files-on-the-coup-agai_zh.md  he-almost-didn-t-go-why-trump-snubbed-nato-for-erdogan_zh.md  mamdani-panic-his-bitter-july-4th-attack-on-musk-backfired-t_zh.md  nixon-s-revenge-trump-just-ended-the-kissinger-doctrine-and_zh.md  the-real-reason-tucker-turned-on-trump_zh.md  tony-fauci-s-killing-field-the-biolab-empire-that-took-us-fr_zh.md  trump-is-finishing-1776-why-mark-carney-and-the-dsa-want-him_zh.md
docs/superpowers/plans/: 2025-06-27-yt-translate.md  2026-07-07-auto-publish-website.md
docs/superpowers/specs/: 2025-06-27-yt-translate-design.md  2026-07-07-auto-publish-website-design.md
site/: index.html  style.css
site/data/: articles.json
src/yt_translate/: __init__.py  build_site.py  chunker.py  cli.py  fetcher.py  formatter.py  parser.py  publish.py  translator.py
src/yt_translate/site_assets/: app.js
tests/: test_build_site.py  test_chunker.py  test_cli.py  test_fetcher.py  test_formatter.py  test_parser.py  test_publish.py  test_translator.py
