[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-translate"
version = "0.1.0"
description = "Download YouTube transcripts and translate to Chinese"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=0.6.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "yt-dlp>=2024.0.0",
    "python-slugify>=8.0.0",
]

[project.scripts]
yt-translate = "yt_translate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
